# learning_python

session_01_getting_started/: README.md  pyproject.toml
session_01_getting_started/hello_world/: main.ipynb
session_02_comments_variables_strings/: README.md  pyproject.toml
session_02_comments_variables_strings/comments_variables_strings/: main.ipynb  main.py
session_03_numbers_boolean_operators/: README.md  pyproject.toml
session_03_numbers_boolean_operators/numbers_boolean_operators/: main.ipynb  main.py
