[tool.poetry]
name = "numbers-boolean-operators"
version = "0.1.0"
description = ""
authors = ["Hassan Ali Khan <73381969+hassan-ak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
